flux/apps/playerr/httproute.enc.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
    name: playerr
    namespace: gaming
spec:
    parentRefs:
        - name: traefik-gateway
          namespace: system-addon
    hostnames:
        - ENC[AES256_GCM,data:0y88vaX6/Y2vOYfgpzyKIUbAuR2dUNVfzXWFaT0=,iv:ziM+xhNpWU0ZlGBBrvp6iE4xLypPXgMncABDPWDgvuY=,tag:NsPVjW5379llq/yyvcXbOw==,type:str]
    rules:
        - matches:
            - path:
                type: PathPrefix
                value: /
          backendRefs:
            - name: playerr
              port: 2727
sops:
    age:
        - recipient: age15kgnnd0nlu5vxerhfcrzh5y77x7efudnk74sk4d6z3zn29yltc5q25r54a
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBRQUJ1UW41aWlISWE1TzB3
[...]
            OC1HlcixWCVEPAdqr5DgtIUg4jzsUUdlCPAmIQZivJAUrVxKHoozlQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2026-01-09T20:32:09Z"
    mac: ENC[AES256_GCM,data:/RibZHKPaQYae6VzM2+9+tdVa8mn2daD1Y3TzHvRoGf+7dfBa7/jtKg513/a2FXehga9EOfPTgDXYBRbmIyfAUvD9sVoFRbowzr+VF5HfoRmHfpN9vZFNkOlyH/Dilm7O7gc/fpxj/ynKUHrbfgqyVHKP2YCEtnvFIzWmEKgDwQ=,iv:nxkw9142QOvDU27OP5uGRhRcIx3xDUonwna6qS3l+z0=,tag:ohbP2HcPC1PWr4LlxuJB2A==,type:str]
    encrypted_regex: hostnames|0
    version: 3.11.0
